--- a/store/src/Routes/Cart.module.css
+++ b/store/src/Routes/Cart.module.css
@@ -1,12 +1,37 @@
 .cart img{
     width: 100px;
 }
+.cart{
+    margin-top: 50px;
+}
 .cart>div{
-    border: 1px solid red;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 20px;
+}
+
+.quantity button{
+    border:none;
+    background: #f0db4f ;
+    padding: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    margin: 5px;
+}
+
+.delete{
+    background: red;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
 }
 
 /* 
@@ -15,3 +40,10 @@
     flex-direction: column;
     justify-content: left;
 } */
+
+
+@media (min-width: 100px) and (max-width: 500px) {
+    .cart img{
+        width: 50px;
+    }
+}
